--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -5,7 +5,8 @@ html, body, .map-canvas {
 }
 
 body {
-	font-size: 62.5%
+	font-size: 62.5%;
+	font-family:'Roboto', sans-serif;
 }
 
 header a h1 {
@@ -176,6 +177,7 @@ h3.results-label, .result-list {
 
 h3.results-label {
 	font-size: 2em;
+	padding-bottom:10px;
 }
 
 .result-list {
@@ -187,6 +189,8 @@ h3.results-label {
 	padding: 10px 0;
 	margin: 0 10px 0 0;
 	font-size: 1.6em;
+	background:white;
+	font-weight:100;
 }
 
 .result-list li.active {
@@ -195,6 +199,7 @@ h3.results-label {
 
 .result-list li a {
 	color: #333;
+	text-decoration:none;
 }
 
 .result-list li a:hover {
@@ -205,35 +210,66 @@ h3.results-label {
 .map-canvas {
     width: 100%;
 }
+/**INFO POP UP**/
+.info p {
+	padding: 10px;
+	font-size: 1.6em;
+	line-height:18px;
+}
+
+.info{
+  	position: absolute;
+  	width: 400px;
+  	margin: 20px auto;
+  	color: #000000;
+  	background: #FFFFFF;
+  	display: none;
+  	border-radius:5px;
+  	font-weight:100;
+}
+
+.hgroup{
+	background: #2574A9;
+	padding:10px;
+	border-radius: 5px 5px 0 0;
+	color:#fff;
+}
 
 .info {
-	display: none;
-	width: 35%;
-	position: absolute;
+
     bottom: 15%;
     right: 5%;
-	padding: 20px 2%;
-	background: #d2f0f9;
 }
 
-.info h2 {
-	font-size: 2.2em;
+.info h2{
+	font-size:2em;
+	font-weight:400;
 }
-
 .info h3 {
-	font-size: 2em;
+	font-size: 1.4em;
 }
 
 .info .poi-image{
 	background-size: cover;
-	width: 100%;
+	margin:10px;
+	width: 95%;
 	height: 250px;
 }
 
-.info p {
-	padding: 10px 0 0;
-	font-size: 2em;
+
+.info a{
+	padding:10px;
+	text-decoration: none;
+	float:left;
+	font-size:1.4em;
+	color:#2574A9;
 }
+
+.info a:hover{
+	text-decoration: underline;
+}
+
+
 
 
 /* MEDIA QUERIES */
