--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -73,11 +73,9 @@ header .menu-btn {
     border-radius: 7px;
     border: 1px solid rgba(0,0,0,0.15);
     box-shadow: 0 1px 1px rgba(50,50,50,0.1);
-    cursor: pointer;
     outline: none;
- 
-    font-weight: bold;
-    color: #8AA8BD;
+ 	font-family:'Roboto', sans-serif;
+    color: black;
 }
 
 .wrapper-dropdown:after {
@@ -186,11 +184,12 @@ h3.results-label {
 
 .result-list li {
 	/*border-bottom: 1px solid #000;*/
-	padding: 10px 0;
+	padding: 10px;
 	margin: 0 10px 0 0;
 	font-size: 1.6em;
-	background:white;
+	background:#fff;
 	font-weight:100;
+	width:55%;
 }
 
 .result-list li.active {
@@ -225,7 +224,7 @@ h3.results-label {
   	background: #FFFFFF;
   	display: none;
   	border-radius:5px;
-  	font-weight:100;
+  	font-weight:300;
 }
 
 .hgroup{
@@ -263,6 +262,7 @@ h3.results-label {
 	float:left;
 	font-size:1.4em;
 	color:#2574A9;
+	font-weight:500;
 }
 
 .info a:hover{
@@ -307,6 +307,16 @@ h3.results-label {
 		position: static;
 	    width: 100%;
 	    height: 100%;
+	    margin-top:0;
+	}
+	.info p{
+		padding-top:0;
+	}
+	.hgroup{
+		margin:0;
+		border-radius:0;
+		
+
 	}
 
 }
